CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(Smuggler)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS "ON")

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()

INCLUDE(cmake/FindLibraries.cmake REQUIRED)
INCLUDE(cmake/CompilerFlags.cmake REQUIRED)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(app)
ADD_SUBDIRECTORY(doc)
ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)
